[gd_scene load_steps=3 format=3 uid="uid://dq0j75x3yeqbp"]

[ext_resource type="Script" path="res://Scripts/inventory_slot.gd" id="1_41cls"]
[ext_resource type="Texture2D" uid="uid://buen5mmjweh6b" path="res://Assets/Ui/Dialog/FacesetBox.png" id="1_oeju0"]

[node name="InventorySlot" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_41cls")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("1_oeju0")

[node name="MenuButton" type="MenuButton" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
popup/item_0/text = "Equip"
popup/item_1/text = "Drop"
popup/item_1/id = 1

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect/MenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MenuButton/CenterContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="Button" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="StackLabel" type="Label" parent="NinePatchRect"]
texture_filter = 1
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -25.0
offset_right = -2.0
offset_bottom = -2.0
text = "12"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 2
